# sunshine_club

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml
.frontend-review/: README.md  config.json
docker/: dashboard.Dockerfile  python.Dockerfile
docs/: README.md  Sunshine_Taxonomy_Seed_v0.1_2026-05-25.json  Sunshine_Taxonomy_v0.1_Workbook_2026-05-25.xlsx  Sunshine_Verdify_Taxonomy_Tagging_Handoff_2026-05-25.md  agent_worktree_workflow.md  architecture.md  backend_refactor_implementation_plan.md  corpus-inventory.md  corpus-taxonomy-report.md  cortex_implementation.md  current_langgraph_architecture.md  dashboard.md  dashboard_rebuild_design.md  dashboard_review_cycle_ux_roadmap.md  data-model.md  docling_ocr_integration_design.md  extraction_goal.md  file_browser_search_redesign.md  file_segmentation_design.md  implementation-plan.md  langgraph_migration_design.md  langgraph_open_source_provider_strategy.md  ocr_milestone_design.md  pipeline.md  pipeline_quality_eval_roadmap.md  product-spec.md  provider_benchmark_canonical_samples.example.json  review_dashboard_implementation_design.md  review_dashboard_iteration_design.md  review_dashboard_workflow.md  roadmap.md  run_reports_design.md  runbook.md  sample_pipeline_implementation.md  semantic_tagging_eval_milestone.md  sunshine_v2_end_to_end_architecture.md  taxonomy.md  technical-architecture.md  technical-plan.md  technical-stack.md  (+2 more)
tests/: test_api_pipeline.py  test_cortex.py  test_embeddings.py  test_evaluate_pipeline.py  test_extraction_planning.py  test_extraction_probe.py  test_foundation_slice.py  test_inventory_connector.py  test_langgraph_pipeline.py  test_pipeline_eval_compare.py  test_placement.py  test_postgres_pipeline_store.py  test_provider_benchmark.py  test_review_corrections.py  (+6 more)
(+91 files in other folders)
