[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunshine-club"
version = "0.1.0"
description = "Document intelligence and organization system for Sunshine Club."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "psycopg[binary]>=3.1",
  "temporalio>=1.6",
  "langgraph>=0.2",
  "opentelemetry-api>=1.25",
  "langfuse>=2.36"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2"
]

[tool.setuptools.packages.find]
where = [
  "apps/api/src",
  "apps/worker/src",
  "packages/connectors/src",
  "packages/core/src",
  "packages/extraction/src",
  "packages/workflows/src"
]
