[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunshine-club"
version = "0.1.0"
description = "Document intelligence and organization system for Sunshine Club."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "psycopg[binary]>=3.1",
  "temporalio>=1.6",
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=3.1",
  "langchain-openai>=0.1",
  "python-dotenv>=1.0",
  "opentelemetry-api>=1.25",
  "langfuse>=2.36",
  "pillow>=10.4",
  "pypdf>=4.3",
  "pypdfium2>=4.30",
  "pytesseract>=0.3.13",
  "qdrant-client>=1.12"
]

[project.optional-dependencies]
docling = [
  "docling>=2.46"
]
dev = [
  "pytest>=8.2"
]

[tool.setuptools.packages.find]
where = [
  "apps/api/src",
  "apps/worker/src",
  "packages/connectors/src",
  "packages/core/src",
  "packages/extraction/src",
  "packages/workflows/src"
]

[tool.setuptools.package-data]
sunshine_extraction = [
  "config/*.json"
]
